--- a/DiffDock_SingleComplex.ipynb
+++ b/DiffDock_SingleComplex.ipynb
@@ -599,6 +599,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "For demo files refer my [github profile](https://github.com/suneelbvs/DiffDock)"
+      ],
+      "metadata": {
+        "id": "LA0e0STv3nNC"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "wpIBFqW7eNC7"
       },
